--- a/web/static/index.html
+++ b/web/static/index.html
@@ -7,12 +7,13 @@
 </head>
 <body>
 	<div id="controller" ng-app="" ng-controller="speechTextController">
-	{{currentText()}}
-	</div>
-    <p><span id="transcript"></span> <span id="temp"></span></p>
+	{{currentText()}}<br><br>
+	{{currentLine()}}<br>
     <button onclick="startRecording();">Record</button><br>
     <button onclick="addFullStop();">Add Full Stop</button><br>
-    <button onclick="post();">Submit</button>
+    <br>
+	{{results()}}
+	</div>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
