Inserting full-stops in the middle of sentences. now max 1 fullstop.

--- a/web/static/index.html
+++ b/web/static/index.html
@@ -60,6 +60,7 @@
 
         <!--<h3 class="content-head is-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed cursus, urna non venenatis feugiat, erat velit venenatis sapien, quis aliquam nibh est et nunc. Nulla facilisi. Maecenas sed maximus neque. In eget viverra nulla, quis egestas tellus. Sed euismod est tortor, in rhoncus nisi aliquet feugiat. Sed eget sodales nibh. Etiam vestibulum urna vel sapien consequat, varius egestas tortor placerat. Phasellus a rutrum magna. Duis vel sollicitudin augue, et vehicula lorem.</h3>-->
         <h3>{{currentText()}}</h3>
+        <h3>{{currentLine()}}</h3>
 
     <style scoped>
         .button-record {
