--- a/web/static/index.html
+++ b/web/static/index.html
@@ -85,6 +85,13 @@
             <button class="button-record pure-button pure-button-primary" onclick="startRecording();">Record</button>
         </div>
         <div class="pure-u-9-24"></div>
+    </div><br>
+    <div class="pure-g">
+        <div class="pure-u-9-24"></div>
+        <div class="pure-u-1-4">
+            <button class="button-record pure-button pure-button-warning" onclick="reset();">RESET</button>
+        </div>
+        <div class="pure-u-9-24"></div>
     </div>
     
 
